--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -841,7 +841,11 @@ sidebar {
         .no-touch sidebar .sidebar-browse a[ng-href=""]:hover {
           color: #fff; }
   sidebar .sidebar-menu {
-    background: #fff; }
+    background: #fff;
+    border-bottom: 1px solid #e0e0e0; }
+    @media screen and (min-width: 768px) {
+      sidebar .sidebar-menu {
+        border-bottom: 0; } }
     sidebar .sidebar-menu a.menu-toggle {
       display: block;
       padding: 0.2rem;
@@ -859,7 +863,6 @@ sidebar {
           display: none; } }
     sidebar .sidebar-menu ul {
       max-height: 0;
-      border-bottom: 1px solid #9e9e9e;
       margin-bottom: -1px;
       -webkit-transition: all 0.3s ease;
       -moz-transition: all 0.3s ease;
